Adcionado foto e lista

--- a/fundamentos/bloco-3-introducao-html/dia-1-html/index.html
+++ b/fundamentos/bloco-3-introducao-html/dia-1-html/index.html
@@ -5,7 +5,8 @@
         <title>HTML</title>
     </head>
     <body>
-        <h1>Exercícios</h1>
+        <h1>Exercícios da trybe Bloco 3.1</h1>
+        <h2>Aprendendo os comandos básicos do HTML!</h2>
         <p>
             <ul>
                 <li>Matheus</li>
@@ -14,6 +15,7 @@
             </ul>
         </p>
     </body>
-    <img src="" width="300px">
+    <img src="1661969430743.jpg"
+ width="300px">
     
 </html>
