Adcionado links sociais

--- a/fundamentos/bloco-3-introducao-html/dia-1-html/index.html
+++ b/fundamentos/bloco-3-introducao-html/dia-1-html/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>HTML</title>
     </head>
+
     <body>
         <h1>Exercícios da trybe Bloco 3.1</h1>
         <h2>Aprendendo os comandos básicos do HTML!</h2>
@@ -15,7 +16,19 @@
             </ul>
         </p>
     </body>
+
     <img src="1661969430743.jpg"
  width="300px">
-    
-</html>
+
+ <p>Links úteis:
+ <ul>
+    <li><a href="https://www.linkedin.com/in/joao-pedro-ribeiro-lobo-blanco-6bb52321b/" target="_blank">Linkedin</a></li>
+    <li><a href="https://www.instagram.com/joao.blanco.1/" target="_blank">Instagram</a></li>
+    <li><a href="https://www.betrybe.com/" target="_blank">Trybe</a></li>
+ </ul>
+ </p>
+ 
+ 
+ 
+ 
+ </html>
